Compiled script for distrib, dynamic script loading for debugging

--- a/minusd.html
+++ b/minusd.html
@@ -1,15 +1,16 @@
 <html>
 
   <head>
-    <title>Minus Cube</title>
-    <script type="text/javascript" src="minus.js"></script>
+    <title>Minus Cube Debug</title>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+    <script type="text/javascript" src="js/utils/minusd.js"></script>
     <link rel="stylesheet" type="text/css" href="minus.css"></link>
   </head>
 
   <body onload="main_init();">
 
     <div id="title">
-      Minus Cube
+      Minus Cube Debug
       | <span id="fps">0</span> fps
       | <span id="avg">0</span> avg
       | <span id="tri">0</span> tri
@@ -19,7 +20,7 @@
       <a onclick="minus_input_scramble();">scramble</a>
       | <a onclick="minus_input_solve();">solve</a>
     </div>
-    <div id="output"><ul><li>Minus Cube</li></ul></div>
+    <div id="output"><ul><li>Minus Cube Debug</li></ul></div>
 
   </body>
 
