--- a/minus.html
+++ b/minus.html
@@ -2,8 +2,9 @@
 
   <head>
     <title>Minus Cube</title>
-    <script type="text/javascript" src="minus.js"></script>
+    <link rel="shortcut icon" href="minus.ico" />
     <link rel="stylesheet" type="text/css" href="minus.css"></link>
+    <script type="text/javascript" src="minus.js"></script>
   </head>
 
   <body onload="main_init();">
