--- a/minusd.html
+++ b/minusd.html
@@ -2,9 +2,10 @@
 
   <head>
     <title>Minus Cube Debug</title>
+    <link rel="shortcut icon" href="minus.ico" />
+    <link rel="stylesheet" type="text/css" href="minus.css"></link>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
     <script type="text/javascript" src="js/utils/minusd.js"></script>
-    <link rel="stylesheet" type="text/css" href="minus.css"></link>
   </head>
 
   <body onload="main_init();">
