--- a/minus.html
+++ b/minus.html
@@ -4,23 +4,33 @@
     <title>Minus Cube</title>
     <link rel="shortcut icon" href="minus.ico" />
     <link rel="stylesheet" type="text/css" href="minus.css"></link>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+    <script type="text/javascript" src="http://lorancou.free.fr/bulk/jsdep/gl-matrix-min.js"></script>
     <script type="text/javascript" src="minus.js"></script>
   </head>
 
-  <body onload="main_init();">
-
-    <div id="title">
-      Minus Cube
-      | <span id="fps">0</span> fps
-      | <span id="avg">0</span> avg
-      | <span id="tri">0</span> tri
+  <body onload="main_init(false);">
+  
+    <div class="column">
+      <div id="title">
+        <span id="fps">0</span> fps
+        | <span id="avg">0</span> avg
+      </div>
+      <div id="canvases">
+        <canvas id="2dcanvas" width="400" height="300"></canvas>
+        <canvas id="glcanvas" width="400" height="300"></canvas>
+      </div>
+      <div id="command">
+        <a href="" onclick="main_use_ajax3d(); return false;">ajax3d</a>
+        | <a href="" onclick="main_use_webgl(); return false;">webgl</a>
+        | <a href="" onclick="minus_input_scramble(); return false;">scramble</a>
+        | <a href="" onclick="minus_input_solve(); return false;">solve</a>
+      </div>
     </div>
-    <div><canvas id="main" width="400" height="300"></canvas></div>
-    <div id="command">
-      <a onclick="minus_input_scramble();">scramble</a>
-      | <a onclick="minus_input_solve();">solve</a>
+      
+    <div class="column">
+      <div id="output"><ul><li>Minus Cube</li></ul></div>
     </div>
-    <div id="output"><ul><li>Minus Cube</li></ul></div>
 
   </body>
 
