--- a/minus.template.html
+++ b/minus.template.html
@@ -4,23 +4,32 @@
     <title><!-- MINUS_TITLE --></title>
     <link rel="shortcut icon" href="minus.ico" />
     <link rel="stylesheet" type="text/css" href="minus.css"></link>
-    <!-- MINUS_INCLUDES -->
+    <!-- MINUS_JSDEPLIST -->
+    <!-- MINUS_JSLIST -->
   </head>
 
-  <body onload="main_init();">
-
-    <div id="title">
-      <!-- MINUS_TITLE -->
-      | <span id="fps">0</span> fps
-      | <span id="avg">0</span> avg
-      | <span id="tri">0</span> tri
+  <body onload="<!-- MINUS_INIT -->">
+  
+    <div class="column">
+      <div id="title">
+        <span id="fps">0</span> fps
+        | <span id="avg">0</span> avg
+      </div>
+      <div id="canvases">
+        <canvas id="2dcanvas" width="400" height="300"></canvas>
+        <canvas id="glcanvas" width="400" height="300"></canvas>
+      </div>
+      <div id="command">
+        <a href="" onclick="main_use_ajax3d(); return false;">ajax3d</a>
+        | <a href="" onclick="main_use_webgl(); return false;">webgl</a>
+        | <a href="" onclick="minus_input_scramble(); return false;">scramble</a>
+        | <a href="" onclick="minus_input_solve(); return false;">solve</a>
+      </div>
     </div>
-    <div><canvas id="main" width="400" height="300"></canvas></div>
-    <div id="command">
-      <a onclick="minus_input_scramble();">scramble</a>
-      | <a onclick="minus_input_solve();">solve</a>
+      
+    <div class="column">
+      <div id="output"><ul><li><!-- MINUS_TITLE --></li></ul></div>
     </div>
-    <div id="output"><ul><li><!-- MINUS_TITLE --></li></ul></div>
 
   </body>
 
