IE9 support, will always use Ajax3d as there's no WebGL support

--- a/minus.html
+++ b/minus.html
@@ -1,7 +1,9 @@
+<!DOCTYPE html>
 <html>
 
   <head>
     <title>Minus Cube</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
     <link rel="shortcut icon" href="minus.ico" />
     <link rel="stylesheet" type="text/css" href="minus.css"></link>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
