--- a/minus.template.html
+++ b/minus.template.html
@@ -1,7 +1,9 @@
+<!DOCTYPE html>
 <html>
 
   <head>
     <title><!-- MINUS_TITLE --></title>
+    <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
     <link rel="shortcut icon" href="minus.ico" />
     <link rel="stylesheet" type="text/css" href="minus.css"></link>
     <!-- MINUS_JSDEPLIST -->
