--- a/distrib/pokki/popup.html
+++ b/distrib/pokki/popup.html
@@ -21,6 +21,7 @@
     <script type="text/javascript" src="js/popup.js"></script>
     
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+    <script type="text/javascript" src="https://cvs.khronos.org/svn/repos/registry/trunk/public/webgl/sdk/demos/common/webgl-utils.js"></script>
     <script type="text/javascript" src="http://lorancou.free.fr/bulk/jsdep/gl-matrix-min.js"></script>
     <script type="text/javascript" src="../../minus.js"></script>
   </head>
