--- a/minus.html
+++ b/minus.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="minus.ico" />
     <link rel="stylesheet" type="text/css" href="minus.css"></link>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+    <script type="text/javascript" src="https://cvs.khronos.org/svn/repos/registry/trunk/public/webgl/sdk/demos/common/webgl-utils.js"></script>
     <script type="text/javascript" src="http://lorancou.free.fr/bulk/jsdep/gl-matrix-min.js"></script>
     <script type="text/javascript" src="minus.js"></script>
   </head>
