Renderer classes: one for 2D canvas, one for WebGL

--- a/minus.template.html
+++ b/minus.template.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
     <link rel="shortcut icon" href="minus.ico" />
     <link rel="stylesheet" type="text/css" href="minus.css"></link>
-    <!-- MINUS_JSDEPLIST -->
     <!-- MINUS_JSLIST -->
   </head>
 
@@ -22,8 +21,8 @@
         <canvas id="glcanvas" width="400" height="300"></canvas>
       </div>
       <div id="command">
-        <a href="" onclick="main_use_ajax3d(); return false;">ajax3d</a>
-        | <a href="" onclick="main_use_webgl(); return false;">webgl</a>
+        <a href="" onclick="main_use_c2renderer(); return false;">2d</a>
+        | <a href="" onclick="main_use_glrenderer(); return false;">gl</a>
         | <a href="" onclick="minus_input_scramble(); return false;">scramble</a>
         | <a href="" onclick="minus_input_solve(); return false;">solve</a>
       </div>
