--- a/minus.html
+++ b/minus.html
@@ -6,9 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
     <link rel="shortcut icon" href="minus.ico" />
     <link rel="stylesheet" type="text/css" href="minus.css"></link>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-    <script type="text/javascript" src="https://cvs.khronos.org/svn/repos/registry/trunk/public/webgl/sdk/demos/common/webgl-utils.js"></script>
-    <script type="text/javascript" src="http://lorancou.free.fr/bulk/jsdep/gl-matrix-min.js"></script>
     <script type="text/javascript" src="minus.js"></script>
   </head>
 
@@ -24,8 +21,8 @@
         <canvas id="glcanvas" width="400" height="300"></canvas>
       </div>
       <div id="command">
-        <a href="" onclick="main_use_ajax3d(); return false;">ajax3d</a>
-        | <a href="" onclick="main_use_webgl(); return false;">webgl</a>
+        <a href="" onclick="main_use_c2renderer(); return false;">2d</a>
+        | <a href="" onclick="main_use_glrenderer(); return false;">gl</a>
         | <a href="" onclick="minus_input_scramble(); return false;">scramble</a>
         | <a href="" onclick="minus_input_solve(); return false;">solve</a>
       </div>
