--- a/minusd.html
+++ b/minusd.html
@@ -6,17 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
     <link rel="shortcut icon" href="minus.ico" />
     <link rel="stylesheet" type="text/css" href="minus.css"></link>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-    <script type="text/javascript" src="https://cvs.khronos.org/svn/repos/registry/trunk/public/webgl/sdk/demos/common/webgl-utils.js"></script>
-    <script type="text/javascript" src="http://lorancou.free.fr/bulk/jsdep/gl-matrix-min.js"></script>
+    <script type="text/javascript" src="js/dep/jquery-1.7.1.min.js"></script>
+    <script type="text/javascript" src="js/dep/webgl-utils.js"></script>
+    <script type="text/javascript" src="js/dep/gl-matrix-min.js"></script>
+    <script type="text/javascript" src="js/namespace.js"></script>
     <script type="text/javascript" src="js/ajax3d/trigo.js"></script>
     <script type="text/javascript" src="js/ajax3d/intersect.js"></script>
     <script type="text/javascript" src="js/ajax3d/light.js"></script>
     <script type="text/javascript" src="js/ajax3d/log.js"></script>
     <script type="text/javascript" src="js/ajax3d/model.js"></script>
     <script type="text/javascript" src="js/ajax3d/util.js"></script>
-    <script type="text/javascript" src="js/ajax3d/sort.js"></script>
-    <script type="text/javascript" src="js/webgl/glcore.js"></script>
+    <script type="text/javascript" src="js/gfx/renderer/IRenderer.js"></script>
+    <script type="text/javascript" src="js/gfx/renderer/Canvas2DRenderer.js"></script>
+    <script type="text/javascript" src="js/gfx/renderer/WebGLRenderer.js"></script>
     <script type="text/javascript" src="js/minus/camera.js"></script>
     <script type="text/javascript" src="js/minus/input.js"></script>
     <script type="text/javascript" src="js/minus/mesh.js"></script>
@@ -38,8 +40,8 @@
         <canvas id="glcanvas" width="400" height="300"></canvas>
       </div>
       <div id="command">
-        <a href="" onclick="main_use_ajax3d(); return false;">ajax3d</a>
-        | <a href="" onclick="main_use_webgl(); return false;">webgl</a>
+        <a href="" onclick="main_use_c2renderer(); return false;">2d</a>
+        | <a href="" onclick="main_use_glrenderer(); return false;">gl</a>
         | <a href="" onclick="minus_input_scramble(); return false;">scramble</a>
         | <a href="" onclick="minus_input_solve(); return false;">solve</a>
       </div>
