Cleanup build processs

--- a/distrib/pokki/popup.template.html
+++ b/distrib/pokki/popup.template.html
@@ -20,7 +20,8 @@
     <!-- Loading pop-up logic -->
     <script type="text/javascript" src="js/popup.js"></script>
     
-    <!-- MINUS_JSLIST -->
+    <!-- MINUS_DEPS -->
+    <!-- MINUS_SCRIPTS -->
   </head>
   <body onload="<!-- MINUS_INIT -->">
         <div id="wrapper">
