--- a/distrib/www/minus.template.html
+++ b/distrib/www/minus.template.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
     <link rel="shortcut icon" href="minus.ico" />
     <link rel="stylesheet" type="text/css" href="minus.css"></link>
-    <!-- MINUS_JSLIST -->
+    <!-- MINUS_DEPS -->
+    <!-- MINUS_SCRIPTS -->
   </head>
 
   <body onload="<!-- MINUS_INIT -->">
